force-app/main/default/objects/custom_create387__c/custom_create387__c.object-meta.xml
<CustomObject>
    <label>Custom created object387</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects387</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>