force-app/main/default/objects/custom_create387__c/fields/custom_create_387field636__c.field-meta.xml
<CustomField>
    <fullName>custom_create_387field636__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 387field636</label>
    <type>Checkbox</type>
</CustomField>